--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,7 @@
 		<style>
 			body {
 				width: 320px;
-				background-color: antiquewhite;
+				background-color: #ffffff;
 				padding-top: 1px;
 				padding-bottom: 8px;
 				margin: 16px;
@@ -29,11 +29,11 @@
 	</style>
   </head>
   <body>
-		<h4>ANHSTOCK FAST DOWNLOADER?</h4>
-<!--		<p class="url"><i id="url"></i></p>-->
-<!--		<p id="stopAskingWrap"><label><input id="stopAsking" type="checkbox" style="vertical-align: top;"> Không hỏi lại</label></p>-->
-<!--		<p><button id="sendLink" title="Gửi link đang mở ở tab hiện tại lên Linkhay">GỬI</button></p>-->
-		<!--p><small><i>LinkHay QuickView - version 1.1<br>By <a target="_blank" href="http://linkhay.com/u/thinker">@thinker</a> at <a target="_blank" href="http://www.mangcut.vn/">Măng Cụt Labs</a></i></small></p-->
+		<h4>ANHSTOCK QUICK DOWNLOADER?</h4>
+		<p class="url"><i id="url"></i></p>
+		<p id="stopAskingWrap"><label><input id="stopAsking" type="checkbox" style="vertical-align: top;"> Không hỏi lại</label></p>
+		<p><button id="sendLink" title="Gửi link đang mở ở tab hiện tại lên Linkhay">GỬI</button></p>
+		p><small><i>LinkHay QuickView - version 1.1<br>By <a target="_blank" href="http://linkhay.com/u/thinker">@thinker</a> at <a target="_blank" href="http://www.mangcut.vn/">Măng Cụt Labs</a></i></small></p
 		<div>Hỗ trợ tải ảnh nhanh từ các trang Stock.</div>
 		<h5>Phiên bản: 1.0</h5>
 		<h5>www.anhstock.com</h5>
